--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -129,6 +129,7 @@
      <Compile Include="Assets\Scripts\Trap\Toggle.cs" />
      <Compile Include="Assets\Scripts\UI Control\AimSliderControl.cs" />
      <Compile Include="Assets\Scripts\UI Control\BillboardSprite.cs" />
+     <Compile Include="Assets\Scripts\UI Control\GetName.cs" />
      <Compile Include="Assets\Scripts\UI Control\PauseMenu.cs" />
      <Compile Include="Assets\Scripts\UI Control\SceneFader.cs" />
      <Compile Include="Assets\Trails FX\Demo\Scripts\MoveObject.cs" />
