Text with Color

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -86,12 +86,13 @@
      <Compile Include="Assets\MeshEffect\Scripts\Rendering\ME_LWRP_RenderDistortion.cs" />
      <Compile Include="Assets\MeshEffect\Scripts\Rendering\ME_PerPlatformSettings.cs" />
      <Compile Include="Assets\MeshEffect\Scripts\Rendering\ME_Unity_LWRP_HDRP_Pain.cs" />
-     <Compile Include="Assets\Scripts\Ball Control\BallMove.cs" />
-     <Compile Include="Assets\Scripts\Ball Control\BallRespawn.cs" />
-     <Compile Include="Assets\Scripts\Ball Control\ColorSetting.cs" />
-     <Compile Include="Assets\Scripts\Ball Control\DeathCount.cs" />
-     <Compile Include="Assets\Scripts\Ball Control\Magnetic.cs" />
-     <Compile Include="Assets\Scripts\Ball Control\SpecialEffect.cs" />
+     <Compile Include="Assets\Scripts\Ball\BallMove.cs" />
+     <Compile Include="Assets\Scripts\Ball\BallRespawn.cs" />
+     <Compile Include="Assets\Scripts\Ball\ColorSetting.cs" />
+     <Compile Include="Assets\Scripts\Ball\DeathCount.cs" />
+     <Compile Include="Assets\Scripts\Ball\Magnetic.cs" />
+     <Compile Include="Assets\Scripts\Ball\PlayerColor.cs" />
+     <Compile Include="Assets\Scripts\Ball\SpecialEffect.cs" />
      <Compile Include="Assets\Scripts\Camera Control\CameraControl.cs" />
      <Compile Include="Assets\Scripts\Game Script\Attractor.cs" />
      <Compile Include="Assets\Scripts\Game Script\Barrel.cs" />
@@ -102,12 +103,12 @@
      <Compile Include="Assets\Scripts\Game Script\FloorController.cs" />
      <Compile Include="Assets\Scripts\Game Script\GameController.cs" />
      <Compile Include="Assets\Scripts\Game Script\GameOver.cs" />
+     <Compile Include="Assets\Scripts\Game Script\GameSetting.cs" />
      <Compile Include="Assets\Scripts\Game Script\PlayerInit.cs" />
      <Compile Include="Assets\Scripts\Game Script\Respawn.cs" />
      <Compile Include="Assets\Scripts\Game Script\Score.cs" />
      <Compile Include="Assets\Scripts\Game Script\Timer.cs" />
      <Compile Include="Assets\Scripts\Game Script\Up.cs" />
-     <Compile Include="Assets\Scripts\GameSetting.cs" />
      <Compile Include="Assets\Scripts\Gas\Gas.cs" />
      <Compile Include="Assets\Scripts\Gas\GasSpawn.cs" />
      <Compile Include="Assets\Scripts\Grenade\Grenade.cs" />
@@ -122,7 +123,6 @@
      <Compile Include="Assets\Scripts\Not Using\Jelly Effect\JellyVertex.cs" />
      <Compile Include="Assets\Scripts\Not Using\Jelly Effect\MeshDeformerInput.cs" />
      <Compile Include="Assets\Scripts\Not Using\Jelly Effect\TestMeshDeformer.cs" />
-     <Compile Include="Assets\Scripts\SettingUI.cs" />
      <Compile Include="Assets\Scripts\ToLoadScene.cs" />
      <Compile Include="Assets\Scripts\Trap\BallEject.cs" />
      <Compile Include="Assets\Scripts\Trap\MagnetPlate.cs" />
@@ -132,6 +132,7 @@
      <Compile Include="Assets\Scripts\UI Control\GetName.cs" />
      <Compile Include="Assets\Scripts\UI Control\PauseMenu.cs" />
      <Compile Include="Assets\Scripts\UI Control\SceneFader.cs" />
+     <Compile Include="Assets\Scripts\UI Control\SettingUI.cs" />
      <Compile Include="Assets\Trails FX\Demo\Scripts\MoveObject.cs" />
      <Compile Include="Assets\Trails FX\Demo\Scripts\RotateObject.cs" />
      <Compile Include="Assets\Trails FX\Demo\Scripts\Shooter.cs" />
